<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="@dimen/large_padding"
	tools:context=".ui.fragments.DetailsFragment">

	<TextView
		android:id="@+id/code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/standard_padding"
		android:text="@string/code"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/black"
		app:layout_constraintBottom_toTopOf="@+id/name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/standard_padding"
		android:text="@string/name"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/black"
		app:layout_constraintBottom_toTopOf="@+id/phone"
		app:layout_constraintStart_toStartOf="@+id/code"
		app:layout_constraintTop_toBottomOf="@+id/code" />

	<TextView
		android:id="@+id/phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/standard_padding"
		android:text="@string/phone_code"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/black"
		app:layout_constraintBottom_toTopOf="@+id/capital"
		app:layout_constraintStart_toStartOf="@+id/name"
		app:layout_constraintTop_toBottomOf="@+id/name" />

	<TextView
		android:id="@+id/capital"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/capital"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/black"
		app:layout_constraintBottom_toTopOf="@+id/currency"
		app:layout_constraintStart_toStartOf="@+id/phone"
		app:layout_constraintTop_toBottomOf="@+id/phone" />

	<TextView
		android:id="@+id/currency"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/standard_padding"
		android:text="@string/currency"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/black"
		app:layout_constraintStart_toStartOf="@+id/capital"
		app:layout_constraintTop_toBottomOf="@+id/capital" />

	<TextView
		android:id="@+id/currency_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/medium_padding"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/currency"
		app:layout_constraintStart_toEndOf="@+id/currency" />

	<TextView
		android:id="@+id/code_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/medium_padding"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/code"
		app:layout_constraintStart_toEndOf="@+id/code" />

	<TextView
		android:id="@+id/name_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/medium_padding"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/name"
		app:layout_constraintStart_toEndOf="@+id/name" />


	<TextView
		android:id="@+id/phone_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/medium_padding"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/phone"
		app:layout_constraintStart_toEndOf="@+id/phone" />

	<TextView
		android:id="@+id/capital_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/medium_padding"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/capital"
		app:layout_constraintStart_toEndOf="@+id/capital" />

</androidx.constraintlayout.widget.ConstraintLayout>